--- a/notebooks/inspect_embeddings.ipynb
+++ b/notebooks/inspect_embeddings.ipynb
@@ -3417,9 +3417,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (colexgraph)",
+   "display_name": "nodeEmb",
    "language": "python",
-   "name": "colexgraph"
+   "name": "nodemb"
   },
   "language_info": {
    "codemirror_mode": {
